| Bug #32201 | Creating a table on a fresh Falcon installation leads to crash | ||
|---|---|---|---|
| Submitted: | 8 Nov 2007 22:29 | Modified: | 5 May 2008 16:55 |
| Reporter: | Hakan Küçükyılmaz | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Falcon storage engine | Severity: | S1 (Critical) |
| Version: | 6.0.4-alpha | OS: | MacOS (Intel) |
| Assigned to: | Hakan Küçükyılmaz | CPU Architecture: | Any |
[8 Nov 2007 22:29]
Hakan Küçükyılmaz
[13 Nov 2007 20:42]
Sveta Smirnova
Thank you for the report. Verified as described.
[20 Nov 2007 3:52]
Kevin Lewis
Hakan, You have been trying to isolate this problem. Contact me or Jim if you have any question or can provide some 'hints'.
[27 Nov 2007 18:28]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/38647 ChangeSet@1.2689, 2007-11-27 19:28:12+01:00, hakank@au0012. +2 -0 Fix for Bug#32201 Creating a table on a fresh Falcon installation leads to crash. Problem was that Configuration::getPhysicalMemory() was always returning 0 as physical memory size and thus letting MemControll::getPhysicalMemory() always returning false which caused an "record memory is exhausted" error.
[30 Nov 2007 20:43]
Bugs System
Pushed into 6.0.4-alpha
[11 Feb 2008 19:50]
Kevin Lewis
Patch is in mysql-6.0-falcon and mysql-6.0-release version 6.0.4
[5 May 2008 16:55]
Paul DuBois
Noted in 6.0.4 changelog. On Mac OS X, creating a Falcon table using a new Falcon installation caused a crash.
