Fix for Bug#32201 Creating a table on a fresh Falcon installation leads to crash.

Problem was that
    Configuration::getPhysicalMemory()

was always returning 0 as physical memory size
and thus letting
    MemControll::getPhysicalMemory()

always returning false which caused an
"record memory is exhausted" error.